--- a/views/index.jade
+++ b/views/index.jade
@@ -12,9 +12,5 @@ block content
           a(href="/") Go home
           br
           a(href="/ping") Ping
-
-  script
-    $("#menu-toggle").click(function(e) {
-      e.preventDefault();
-      $("#wrapper").toggleClass("active");
-    });
+          br
+          a(href="/auth/facebook") Login via Facebook
