--- a/views/index.jade
+++ b/views/index.jade
@@ -14,3 +14,8 @@ block content
           a(href="/ping") Ping
           br
           a(href="/auth/facebook") Login via Facebook
+          br
+          a(href="/auth/google") Login via Google
+
+      script(src='http://code.jquery.com/jquery.js')
+      script(src='js/bootstrap.min.js')
