--- a/views/login.jade
+++ b/views/login.jade
@@ -8,18 +8,18 @@ html
         script(src='js/bootstrap.min.js')
     body
     .container
-        h1 Login Page
-        p.lead Say something worthwile here
+        h1 Login
+        p.lead Login to view account
 
         form(role='form', action='/login', method='post', style='max-width: 300px;')
             .form-group
                 input.form-control(type='text', name='username', placeholder='Enter username')
             .form-group
                 input.form-control(type='password', name='password', placeholder='Password')
-            button.btn.btn-default(type='submit') Submit
+            button.btn.btn-primary(type='submit') Submit
             &nbsp;
             a(href='/')
-                button.btn.btn-primary(type='button') Cancel
+                button.btn.btn-default(type='button') Cancel
 
         br
         br
