--- a/views/register.jade
+++ b/views/register.jade
@@ -8,17 +8,17 @@ html
         script(src='js/bootstrap.min.js')
     body
     .container
-        h1 Register page
-        p.lead Say something worthwhile here
+        h1 Register
+        p.lead To Tapio
         br
         form(role='form', action='/register', method='post', style='max-width: 300px;')
             .form-group
                 input.form-control(type='text', name='username', placeholder='Enter username')
             .form-group
                 input.form-control(type='password', name='password', placeholder='Password')
-            button.btn.btn-default(type='submit') Submit
+            button.btn.btn-primary(type='submit') Submit
             &nbsp;
             a(href='/')
-                button.btn.btn-primary(type='button') Cancel
+                button.btn.btn-default(type='button') Cancel
         br
         h4= info
