Added TODO's and updated files
Updated .ignore to ignore socialCredentials
app.js: Changed host port
Account.js: added a couple of fields + changed parameters of old ones
Package.json: required passport for google and Facebook

Routes.js:
 - added comments to explain code
 - required passport for google and Facebook
 - added Facebook and google strategies
 - added auth path for Facebook (google to come)

Jade files: added Facebook button

--- a/views/login.jade
+++ b/views/login.jade
@@ -22,5 +22,9 @@ html
                 button.btn.btn-default(type='button') Cancel
 
         br
+        a(href='/auth/facebook')
+            buttn.btn.btn-primary(type='button') Login with facebook
+
+        br
         br
         h4= info
