--- a/views/register.jade
+++ b/views/register.jade
@@ -21,4 +21,7 @@ html
             a(href='/')
                 button.btn.btn-default(type='button') Cancel
         br
+        a(href='/auth/facebook')
+            buttn.btn.btn-primary(type='button') Register with facebook
+        br
         h4= info
