--- a/views/index.jade
+++ b/views/index.jade
@@ -11,13 +11,16 @@ html
         if(!user)
             p.lead Control panel
             a(href="/login")
-                button.btn.btn-primary(type= 'button') login
+                button.btn.btn-default(type= 'button') login
             &nbsp;
             a(href='/register')
-                button.btn.btn-default(type= 'button') register
+                button.btn.btn-default-white(type= 'button') register
             br
         if(user)
-            p.lead Control panel of: !{user.username}
+            if(user.authenticationMethod === 'Local')
+                p.lead Control panel of: !{user.username}
+            else
+                p.lead Control panel of: !{user.socialUsername}
 
             if(user.token === "null")
                 p No token found
