--- a/views/register.jade
+++ b/views/register.jade
@@ -10,18 +10,23 @@ html
     .container
         h1 Register
         p.lead To Tapio
-        br
         form(role='form', action='/register', method='post', style='max-width: 300px;')
             .form-group
                 input.form-control(type='text', name='username', placeholder='Enter username')
             .form-group
                 input.form-control(type='password', name='password', placeholder='Password')
-            button.btn.btn-primary(type='submit') Submit
+            button.btn.btn-default(type='submit') Submit
             &nbsp;
             a(href='/')
-                button.btn.btn-default(type='button') Cancel
+                button.btn.btn-default-white(type='button') Cancel
         br
+        br
+        br
+        p.lead Social authentication
         a(href='/auth/facebook')
             buttn.btn.btn-primary(type='button') Register with facebook
+        &nbsp;
+        a(href='/auth/google')
+            buttn.btn.btn-danger(type='button') Register with Google+
         br
         h4= info
