Password reset + error when invalid

--- a/views/error.jade
+++ b/views/error.jade
@@ -7,5 +7,5 @@ html
     body
     .container
         h1 Tapio
-        p.lead Sorry we could not find the paige you are looking for
+        p.lead Sorry we could not find the page you are looking for
         img.gifsocket(src="/img/404.gif", alt="qmskjfmslqkjfms")
