--- a/views/changePassword.jade
+++ b/views/changePassword.jade
@@ -7,13 +7,14 @@ html
     body
     .container
         h1 Change your password
-block content
-    form(method='POST')
-        legend Forgot Password
-        .form-group
-            label() Email
-            input.form-control(type='text', name='email', autofocus)
-        button.btn.btn-primary(type='submit') Reset Password
-                &nbsp;
-                a(href='/')
-                    button.btn.btn-default-white(type='button') Cancel
+        -if(error)
+            div#note #{error}
+        form(method='POST')
+            h2 Forgot Password
+            .form-group
+                label() Email
+                input.form-control(type='text', name='email',style='max-width: 300px;', autofocus)
+             button.btn.btn-primary(type='submit') Reset Password
+                    &nbsp;
+                    a(href='/')
+             button.btn.btn-default-white(type='button') Cancel
