--- a/views/changePassword.jade
+++ b/views/changePassword.jade
@@ -16,5 +16,5 @@ html
                 input.form-control(type='text', name='email',style='max-width: 300px;', autofocus)
              button.btn.btn-primary(type='submit') Reset Password
                     &nbsp;
-                    a(href='/')
+            a(href='../')
              button.btn.btn-default-white(type='button') Cancel
