Buttons changePassword fix

--- a/views/index.jade
+++ b/views/index.jade
@@ -33,7 +33,7 @@ html
 
             if(user.token !== "null")
                 log('token: ' + user.token)
-                p Your token is: !{user.token}
+                p.token Your token is: !{user.token}
                 button.btn.btn-secondary(type='button' disabled) Refresh token
                 br
                 br
