--- a/views/changePassword.jade
+++ b/views/changePassword.jade
@@ -6,11 +6,11 @@ html
          link(href='/css/bootstrap.min.css', rel='stylesheet', media='screen')
     body
     .container
-        h1 Change your password
+        h1 Forgot Password
         -if(error)
             div#note #{error}
         form(method='POST')
-            h2 Forgot Password
+            p.lead Change your password
             .form-group
                 label() Email
                 input.form-control(type='text', name='email',style='max-width: 300px;', autofocus)
