--- a/views/index.jade
+++ b/views/index.jade
@@ -33,7 +33,8 @@ html
 
             if(user.token !== "null")
                 log('token: ' + user.token)
-                p.token Your token is: !{user.token}
+                div.tokendiv
+                    p.token Your token is: !{user.token.toString()}
                 button.btn.btn-secondary(type='button' disabled) Refresh token
                 br
                 br
