--- a/views/changePassword.jade
+++ b/views/changePassword.jade
@@ -7,10 +7,11 @@ html
     body
     .container
         h1 Forgot Password
+        p.lead Change your password
+
         -if(error)
-            div#note #{error}
+            p#note #{error}
         form(method='POST')
-            p.lead Change your password
             .form-group
                 label() Email
                 input.form-control(type='text', name='email',style='max-width: 300px;', autofocus)
