--- a/private/css/bootstrap.css
+++ b/private/css/bootstrap.css
@@ -11,6 +11,13 @@
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
 
+
+
+
+.tokendiv{
+    max-width: 400px;
+    overflow: auto;
+}
 article,
 aside,
 details,
