--- a/views/index.jade
+++ b/views/index.jade
@@ -9,6 +9,8 @@ html
         h1 Tapio
 
         if(!user)
+        -if(error)
+            p#note #{error}
             p.lead Control panel
             a(href="/login")
                 button.btn.btn-default(type= 'button') login
