--- a/views/404.jade
+++ b/views/404.jade
@@ -7,5 +7,7 @@ html
     body
     .container
         h1 Tapio
-        p.lead Sorry we could not find the paige you are looking for
+        p.lead Sorry we could not find the page you are looking for
+          span= info
+        br
         img.gifsocket(src="/img/404.gif", alt="qmskjfmslqkjfms")
